2009-05-19  Stephane Delcroix  <sdelcroix@novell.com>

	* MultiScaleImageTileSource.cs: do not try to set the callback method
	for DeepZoomImageTileSources. Avoid a native call and a g_warning.

2009-04-19  Chris Toshok  <toshok@ximian.com>

	* CompositionTarget.cs (UnmanagedRendering): create a
	RenderingEventArgs.

	* RenderingEventArgs.cs: flesh this out.

2009-04-14  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* MultiScaleTileSource.cs: Generate all P/Invoke methods.

2009-03-29  Geoff Norton  <gnorton@novell.com>

	* PixelFormat.cs, PixelFormats.cs, PixelFormatKind.cs: New SL3 API
	required for WriteableBitmap.

2009-03-26  Stephane Delcroix  <sdelcroix@novell.com>

	* MultiScaleTileSource.cs: drop the useless GetImageUri, fix 
	GetImageUriSafe to parse to the unmanaged uri, and no longer return
	a managed string to native land.

2009-03-24  Atsushi Enomoto  <atsushi@ximian.com>

	* MediaStreamSource.cs : add "True" and "False" for possible
	  MediaStreamAttributesKeys.CanSeek values.

2009-03-13  Alan McGovern  <amcgovern@novell.com>

	* CompositionTarget.cs: 't' is not a GCHandle. Fixes
	  silverlight metronome.

2009-03-02  Stephane Delcroix  <sdelcroix@novell.com>

	* MultiScaleTileSource.cs: chain the ctors.

2009-02-22  Geoff Norton  <gnorton@novell.com>

	* MediaStreamSource.cs: The CodecPrivateData needs to be pushed
	down for audio as well as video.

2009-02-22  Geoff Norton  <gnorton@novell.com>

	* MediaStreamSource.cs: The CodecPrivateData is extra_data to our pipeline
	and codec implementation, parse and pass it.

2009-02-22  Geoff Norton  <gnorton@novell.com>

	* MediaStreamSource.cs: The sample offset is an offset in the stream,
	not an offset in the buffer.

2009-02-19  Jeffrey Stedfast  <fejj@novell.com>

	* VideoBrush.cs (SetSource): Implemented.

2009-02-18  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* MediaStreamSource.cs:
	* MediaStreamDescription.cs: Initial implementation of
	  MediaStreamSource.
