@@ -1,3 +1,8 @@
+2009-06-12  Rolf Bjarne Kvinge  <RKvinge@novell.com>
+
+	* ImageBrush.cs: Implement ImageFailed event propagation from
+	unmanaged code.
+
 2009-05-19  Stephane Delcroix  <sdelcroix@novell.com>
 
 	* MultiScaleImageTileSource.cs: do not try to set the callback method
